<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGrey"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account_box_black_60dp"
            tools:ignore="VectorDrawableCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/student_name"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:textColor="@color/colorTextGrey"/>

            <TextView
                android:id="@+id/student_surname"
                android:textSize="18sp"
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_surname"
                android:textColor="@color/colorTextGrey"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_verified_user_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_id"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id_about_fragment"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_department_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_department"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_department"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_student_group_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_group"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_group"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_contact_phone_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_phone"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_phone"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_contact_mail_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_email"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_email"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_birth_date_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_birthDate"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_birth_date"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_education_status_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_educationStatus"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_education_status"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_education_status_black_40dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_academicStatus"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_academic_status"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_gender_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:paddingLeft="10dp"
            android:id="@+id/student_gender"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_gender"
            android:textColor="@color/colorTextGrey"/>

    </LinearLayout>


</LinearLayout>