<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundGrey"
    android:id="@+id/feedback_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_caption"
            android:textColor="@color/colorTextGrey"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextGrey"
            android:backgroundTint="@color/colorTextGrey"
            android:layout_marginTop="5dp"
            tools:ignore="UnusedAttribute">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:hint="@string/subject_feedback"
                android:backgroundTint="@color/colorTextGrey"
                android:outlineAmbientShadowColor="@color/colorTextGrey"
                android:outlineSpotShadowColor="@color/colorTextGrey"
                android:inputType="text"
                android:textColorHint="@color/colorTextGrey"
                android:maxLines="1"
                android:textColor="@color/colorTextGrey"
                tools:targetApi="lollipop" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextGrey"
            android:backgroundTint="@color/colorTextGrey"
            android:layout_marginTop="5dp"
            tools:targetApi="lollipop">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/your_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="50dp"
                android:hint="@string/message_feedback"
                android:backgroundTint="@color/colorTextGrey"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorTextGrey"
                android:textColor="@color/colorTextGrey"
                tools:ignore="UnusedAttribute" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextForButton"
            android:background="@color/colorGreen"
            android:onClick="sendClick"
            android:text="@string/send"
            android:layout_marginTop="5dp"/>


</LinearLayout>

</LinearLayout>